--- a/page.html
+++ b/page.html
@@ -5,5 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page for leasons</title>
   </head>
-  <body></body>
+  <body>
+    Hello username how are you
+  </body>
 </html>
