--- a/page.html
+++ b/page.html
@@ -6,6 +6,6 @@
     <title>Page for leasons</title>
   </head>
   <body>
-    Hello username how are you
+    Hello username how are you?
   </body>
 </html>
