--- a/page.html
+++ b/page.html
@@ -6,6 +6,7 @@
     <title>Page for leasons</title>
   </head>
   <body>
-    Hello username how are you?
+    <h1>Hello username how are you?</h1>
+    <h2>Hello line</h2>
   </body>
 </html>
