--- a/page.html
+++ b/page.html
@@ -8,5 +8,9 @@
   <body>
     <h1>Hello username how are you?</h1>
     <h2>Hello line</h2>
+    <h3>Hello line</h3>
+    <h4>Hello line</h4>
+    <h5>Hello line</h5>
+    <h6>Hello line</h6>
   </body>
 </html>
